plugins {
  id 'com.github.spotbugs' version '5.0.13'
  id 'com.github.ben-manes.versions' version '0.45.0'
  id 'org.owasp.dependencycheck' version '8.1.0'
}

def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
    def regex = /^[0-9,.v-]+(-r)?$/
    return !stableKeyword && !(version ==~ regex)
}

// Define all library dependencies in one file for clarity
apply from:'dependencies.gradle'

dependencyCheck {
    scanConfigurations = ['runtimeClasspath']
}

subprojects {
    apply plugin: "java"
    apply plugin: "eclipse"
    apply plugin: "com.github.spotbugs"
    apply plugin: 'com.github.ben-manes.versions'
    
    sourceCompatibility = 1.11
    targetCompatibility = 1.11

    repositories {
        mavenCentral()
    }

    spotbugsMain { reports { html { required = true } } }
    spotbugsTest { reports { html { required = true } } }

    // Reject all non stable versions in dependency check
    tasks.named("dependencyUpdates").configure {
        rejectVersionIf {
            isNonStable(it.candidate.version)
        }
    }

    // Standard libraries added to all projects
    dependencies {
        testImplementation libraries.junit
        testImplementation libraries.mockito

        implementation libraries.slf4j
    }

}
